force-app/main/default/objects/Tag__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <formula>IMAGE(&quot;https://img.shields.io/badge/&quot;&amp; Category__c &amp;&quot;-&quot;&amp; Name__c &amp;&quot;-&quot;&amp; TEXT(Color__c), Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge</label>
    <type>Text</type>
</CustomField>