force-app/main/default/objects/Tag__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>&quot;tag&quot;</defaultValue>
    <label>Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>