force-app/main/default/objects/Tag__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <defaultValue>&quot;success&quot;</defaultValue>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>brightgreen</fullName>
            </value>
            <value>
                <fullName>green</fullName>
            </value>
            <value>
                <fullName>yellowgreen</fullName>
            </value>
            <value>
                <fullName>yellow</fullName>
            </value>
            <value>
                <fullName>orange</fullName>
            </value>
            <value>
                <fullName>red</fullName>
            </value>
            <value>
                <fullName>blue</fullName>
            </value>
            <value>
                <fullName>lightgrey</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>important</fullName>
            </value>
            <value>
                <fullName>critical</fullName>
            </value>
            <value>
                <fullName>informational</fullName>
            </value>
            <value>
                <fullName>inactive</fullName>
            </value>
            <value>
                <fullName>blueviolet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>